Fix font size (to prevent auto zoom on ios)

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ input[type=text], input[type=number] {
   width: 80%;
   margin: 2px 10% 2px 10%;
   padding: 10px;
+  font-size: 16px;
 }
 
 .error {
